package config

type MusementProviderClientConfig struct {
	BaseURL string `yaml:"BaseURL"`
}
